# opencascade_study

./: CMakeLists.txt  TestOCC1.cpp
test1_vtk/: CMakeLists.txt
test2_ais/: CMakeLists.txt  main.cpp
test3_iges/: main.cpp
